<resources>
    <string name="app_name">MadarTask</string>
    <string name="enter_user_data">Enter User Data</string>
    <string name="user_name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="view_users">View Users</string>

    <string name="users_list">Users List</string>
    <string name="user_details">User Details</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="save_changes">Save Changes</string>

    <string name="delete_user_confirmation_title">Confirm Deletion</string>
    <string name="delete_user_confirmation_message">Are you sure you want to delete %1$s?</string>
    <string name="delete_all_users_confirmation_title">Confirm Delete All</string>
    <string name="delete_all_users_confirmation_message">Are you sure you want to delete all users? This action cannot be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>



</resources>